--- a/index.html
+++ b/index.html
@@ -335,7 +335,11 @@
               <h3 style="color: #33a0ff; font-weight: 600; margin-bottom: 20px;">Oximax Infinite Solution</h3>
               <p style="color: #555; line-height: 1.8; font-size: 16px;">
                 We are a leading group of companies specializing in distribution and supply chain solutions, serving
-                diverse markets across the USA, Middle East, Africa, and the GCC region.
+                diverse markets across the USA, Middle East, Africa, and the GCC region. With a strong and reliable
+                business network, we provide both B2B and B2C services tailored to meet the unique needs of our clients.
+                Over the years, we have built a reputation for trust, quality, and efficiency, becoming a preferred
+                partner for businesses seeking seamless supply, distribution, and market connectivity. Our commitment to
+                excellence and customer satisfaction continues to drive our growth and leadership in the industry.
               </p>
               <a href="#" class="btn"
                 style="background-color: #33a0ff; color: #fff; padding: 10px 25px; border-radius: 30px; margin-top: 15px; text-decoration: none; font-weight: 600;">Read
@@ -349,9 +353,7 @@
                 <div
                   style="position: absolute; bottom: 0; left: 0; width: 100px; height: 100px; border-bottom: 5px solid #33a0ff; border-left: 5px solid #33a0ff; border-radius: 0 0 0 20px;">
                 </div>
-                <img
-                  src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-                  alt="Oximax Warehouse" class="img-fluid"
+                <img src="assets/img/aboutus.png" alt="Oximax Warehouse" class="img-fluid"
                   style="border-radius: 15px; box-shadow: 0 10px 30px rgba(51, 160, 255, 0.15); width: 100%;">
               </div>
             </div>
