--- a/index.html
+++ b/index.html
@@ -107,11 +107,9 @@
                         <div class="content m-auto">
                           <div class="inner-content">
                             <div class="tittle-wrp">
-                              <h2>Ice Cream Coop <br>New item</h2>
+                              <h2>Premium Products for <br>Every Industry</h2>
                             </div>
-                            <div class="btn-wrp">
-                              <a href="shop.html" class="btn-link">Shop Now</a>
-                            </div>
+
                           </div>
                         </div>
                       </div>
@@ -131,11 +129,9 @@
                         <div class="content m-auto">
                           <div class="inner-content">
                             <div class="tittle-wrp">
-                              <h2>Kitchen tool crock <br>Featured Item</h2>
+                              <h2>Smart Solutions for<br>Modern Life</h2>
                             </div>
-                            <div class="btn-wrp">
-                              <a href="shop.html" class="btn-link">Shop Now</a>
-                            </div>
+
                           </div>
                         </div>
                       </div>
@@ -428,77 +424,76 @@
 
     </html>
 
-    <!--== Start Footer Area Wrapper ==-->
     <footer class="footer-area">
       <div class="footer-main">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="widget-item">
-                <h4 class="widget-title">About Information</h4>
+
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="widget-item" style="margin-top: -20px;">
+                <img src="assets/img/OIS LOGO.png" alt="Company Logo" style="width:130px; margin-bottom:10px;" />
+
+                <h4 class="widget-title" style="margin-bottom: 15px;">About Us</h4>
+
                 <div class="about-widget">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud reprhendit in voluptate velit
-                    esse exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="widget-item widget-menu-item">
-                <h4 class="widget-title">Information</h4>
-                <nav class="widget-menu-wrap">
-                  <ul class="nav-menu nav">
-                    <li><a href="shop-account.html">My Account</a></li>
-                    <li><a href="shop-wishlist.html">Wishlist</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="widget-item">
-                <h4 class="widget-title">Quick Links</h4>
-                <nav class="widget-menu-wrap">
-                  <ul class="nav-menu nav">
-                    <li><a href="#/">Shipping policy</a></li>
-                    <li><a href="#/">Size Chart</a></li>
-                    <li><a href="#/">Login</a></li>
-                    <li><a href="#/">My Account</a></li>
-                    <li><a href="#/">Register</a></li>
-                  </ul>
-                </nav>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="widget-item">
-                <h4 class="widget-title">Contact Us</h4>
-                <p class="mb-0">Your current address goes to here,120 example, country.</p>
-                <ul class="widget-contact-info">
-                  <li class="info-phone"><a href="tel://(008)25425425425487">(008) 254 254 254 25487</a></li>
-                  <li class="info-mail"><a href="mailto://example@admin.com">example@admin.com</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="footer-bottom-content">
-            <div class="row align-items-center">
-              <div class="col-12">
-                <div class="widget-copyright text-center">
-                  <p>© 2025 <span>Oximax Infinite Solution</span>. by <a target="_blank"
-                      href="https://rvnetworking.com">RV Networking</a>
+                  <p>
+                    Delivering premium quality, smart design, and complete customer satisfaction.
                   </p>
                 </div>
               </div>
             </div>
+
+            <div class="col-lg-3 offset-lg-1 col-md-6 col-sm-6">
+              <div class="widget-item">
+                <h4 class="widget-title">Quick Links</h4>
+                <nav class="widget-menu-wrap">
+                  <ul class="nav-menu nav">
+                    <li><a href="#/">About Us</a></li>
+                    <li><a href="#/">Electronics</a></li>
+                    <li><a href="#/">Furniture</a></li>
+                    <li><a href="#/">Paper Products</a></li>
+                    <li><a href="#/">Contact Us</a></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+
+            <div class="col-lg-3 offset-lg-1 col-md-6 col-sm-6">
+              <div class="widget-item">
+                <h4 class="widget-title">Contact Us</h4>
+                <p class="mb-0">Mumbai, India</p>
+                <ul class="widget-contact-info">
+                  <li class="info-phone">
+                    <a href="tel:+971588402191">+971 588402191</a>
+                  </li>
+                  <li class="info-mail">
+                    <a href="mailto:ois.oximax@gmail.com">ois.oximax@gmail.com</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
+    </footer>
+
+
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="footer-bottom-content">
+          <div class="row align-items-center">
+            <div class="col-12">
+              <div class="widget-copyright text-center">
+                <p>© 2025 <span>Oximax Infinite Solution</span>. by <a target="_blank"
+                    href="https://rvnetworking.com">RV Networking</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     </footer>
     <!--== End Footer Area Wrapper ==-->
 
