--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <ul class="navbar-nav mb-2 mb-lg-0" style="font-size: 18px; gap: 28px;">
 
           <li class="nav-item"><a class="nav-link" style="color: #000;" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" style="color: #000;" href="index.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" style="color: #000;" href="#about-section">About Us</a></li>
           <li class="nav-item"><a class="nav-link" style="color: #000;" href="electronics.html">Electronics</a></li>
-          <li class="nav-item"><a class="nav-link" style="color: #000;" href="#">Furniture</a></li>
-          <li class="nav-item"><a class="nav-link" style="color: #000;" href="#">Paper Products</a></li>
+          <li class="nav-item"><a class="nav-link" style="color: #000;" href="furniture.html">Furniture</a></li>
+          <li class="nav-item"><a class="nav-link" style="color: #000;" href="paper.html">Paper Products</a></li>
           <li class="nav-item"><a class="nav-link" style="color: #000;" href="contact.html">Contact Us</a></li>
 
         </ul>
@@ -291,7 +291,8 @@
   <body>
 
     <!-- (Previous) About Us Section -->
-    <section class="about-section">
+    <section id="about-section" class="about-section">
+
       <div class="container">
         <div class="row mb-3">
           <div class="col-md-8 col-lg-6 m-auto">
@@ -314,9 +315,7 @@
               to
               excellence and customer satisfaction continues to drive our growth and leadership in the industry.
             </p>
-            <a href="#" class="btn"
-              style="background-color: #33a0ff; color: #fff; padding: 10px 25px; border-radius: 30px; margin-top: 15px; text-decoration: none; font-weight: 600;">Read
-              More</a>
+
           </div>
           <div class="col-lg-6">
             <div class="about-img-wrapper" style="position: relative; padding: 10px;">
@@ -363,7 +362,7 @@
               <div class="card-content">
                 <h3>Electronics</h3>
                 <p>Cutting-edge consumer electronics and industrial components..</p>
-                <a href="#" class="card-btn">View Catalog</a>
+                <a href="electronics.html" class="card-btn">View Catalog</a>
               </div>
             </div>
           </div>
@@ -373,14 +372,12 @@
             <div class="product-card">
               <div class="card-img-wrapper">
                 <!-- Placeholder: Furniture -->
-                <img
-                  src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80"
-                  alt="Furniture">
+                <img src="assets/img/officehome.jpg" alt="Furniture">
               </div>
               <div class="card-content">
                 <h3>Furniture</h3>
                 <p>Ergonomic and stylish furniture solutions for office workspaces and home interiors.</p>
-                <a href="#" class="card-btn">View Catalog</a>
+                <a href="furniture.html" class="card-btn">View Catalog</a>
               </div>
             </div>
           </div>
@@ -390,12 +387,12 @@
             <div class="product-card">
               <div class="card-img-wrapper">
                 <!-- Placeholder: Paper -->
-                <img src="assets/img/pp.jpg" alt="Paper Products">
+                <img src="assets/img/paper.jpg" alt="Paper Products">
               </div>
               <div class="card-content">
                 <h3>Paper Products</h3>
                 <p>High-quality sustainable paper supplies for packaging and corporate use.</p>
-                <a href="#" class="card-btn">View Catalog</a>
+                <a href="paper.html" class="card-btn">View Catalog</a>
               </div>
             </div>
           </div>
@@ -436,9 +433,9 @@
                 <ul class="nav-menu nav list-unstyled">
                   <li><a href="#/" class="text-decoration-none text-reset">About Us</a></li>
                   <li><a href="electronics.html" class="text-decoration-none text-reset">Electronics</a></li>
-                  <li><a href="#/" class="text-decoration-none text-reset">Furniture</a></li>
-                  <li><a href="#/" class="text-decoration-none text-reset">Paper Products</a></li>
-                  <li><a href="#/" class="text-decoration-none text-reset">Contact Us</a></li>
+                  <li><a href="furniture.html" class="text-decoration-none text-reset">Furniture</a></li>
+                  <li><a href="paper.html" class="text-decoration-none text-reset">Paper Products</a></li>
+                  <li><a href="contact.html" class="text-decoration-none text-reset">Contact Us</a></li>
                 </ul>
               </nav>
             </div>
