--- a/furniture.html
+++ b/furniture.html
@@ -413,11 +413,16 @@
                             <h4 class="widget-title" style="margin-bottom: 15px;">Quick Links</h4>
                             <nav class="widget-menu-wrap">
                                 <ul class="nav-menu nav list-unstyled">
-                                    <li><a href="#/" class="text-decoration-none text-reset">About Us</a></li>
-                                    <li><a href="#/" class="text-decoration-none text-reset">Electronics</a></li>
-                                    <li><a href="#/" class="text-decoration-none text-reset">Furniture</a></li>
-                                    <li><a href="#/" class="text-decoration-none text-reset">Paper Products</a></li>
-                                    <li><a href="#/" class="text-decoration-none text-reset">Contact Us</a></li>
+                                    <li><a href="index.html#about-section" class="text-decoration-none text-reset">About
+                                            Us</a></li>
+                                    <li><a href="electronics.html"
+                                            class="text-decoration-none text-reset">Electronics</a></li>
+                                    <li><a href="furniture.html" class="text-decoration-none text-reset">Furniture</a>
+                                    </li>
+                                    <li><a href="paper.html" class="text-decoration-none text-reset">Paper Products</a>
+                                    </li>
+                                    <li><a href="contact.html" class="text-decoration-none text-reset">Contact Us</a>
+                                    </li>
                                 </ul>
                             </nav>
                         </div>
