--- a/paper.html
+++ b/paper.html
@@ -168,7 +168,7 @@
     </header>
     <section class="product-section">
         <div class="container">
-            <h2 class="section-title">Our Paper Products</h2>
+            <h2 class="section-title">OUR PAPER PRODUCTS</h2>
 
             <div class="row g-4">
 
@@ -328,12 +328,16 @@
                             <h4 class="widget-title" style="margin-bottom: 15px;">Quick Links</h4>
                             <nav class="widget-menu-wrap">
                                 <ul class="nav-menu nav list-unstyled">
-                                    <li><a href="#/" class="text-decoration-none text-reset">About Us</a></li>
+                                    <li><a href="index.html#about-section" class="text-decoration-none text-reset">About
+                                            Us</a></li>
                                     <li><a href="electronics.html"
                                             class="text-decoration-none text-reset">Electronics</a></li>
-                                    <li><a href="#/" class="text-decoration-none text-reset">Furniture</a></li>
-                                    <li><a href="#/" class="text-decoration-none text-reset">Paper Products</a></li>
-                                    <li><a href="#/" class="text-decoration-none text-reset">Contact Us</a></li>
+                                    <li><a href="furniture.html" class="text-decoration-none text-reset">Furniture</a>
+                                    </li>
+                                    <li><a href="paper.html" class="text-decoration-none text-reset">Paper Products</a>
+                                    </li>
+                                    <li><a href="contact.html" class="text-decoration-none text-reset">Contact Us</a>
+                                    </li>
                                 </ul>
                             </nav>
                         </div>
