--- a/electronics.html
+++ b/electronics.html
@@ -205,7 +205,7 @@
                         </div>
                         <div class="card-body-custom">
                             <div class="card-category">Audio System</div>
-                            <h3 class="card-title">X-10L Trolley Speaker</h3>
+                            <h3 class="card-title"> Trolley Speaker</h3>
                             <p class="text-muted">8"x2 Woofer with LED Lights</p>
 
                         </div>
