--- a/furniture.html
+++ b/furniture.html
@@ -207,7 +207,7 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Luxury Bed</h5>
-                                <p class="card-text">King size wooden frame with soft headboard.</p>
+                                <p class="card-text">Wooden frame with soft headboard.</p>
                             </div>
                         </div>
                     </div>
@@ -248,7 +248,7 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Dining Table</h5>
-                                <p class="card-text">6-seater solid wood family dining set.</p>
+                                <p class="card-text">Solid wood family dining set.</p>
                             </div>
                         </div>
                     </div>
