--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <div class="product-card">
               <div class="card-img-wrapper">
                 <!-- Placeholder: Furniture -->
-                <img src="assets/img/officehome.jpg" alt="Furniture">
+                <img src="assets/img/sofa.jpg" alt="Furniture">
               </div>
               <div class="card-content">
                 <h3>Furniture</h3>
@@ -387,7 +387,7 @@
             <div class="product-card">
               <div class="card-img-wrapper">
                 <!-- Placeholder: Paper -->
-                <img src="assets/img/paper.jpg" alt="Paper Products">
+                <img src="assets/img/paperproducts.jpeg" alt="Paper Products">
               </div>
               <div class="card-content">
                 <h3>Paper Products</h3>
