--- a/furniture.html
+++ b/furniture.html
@@ -189,8 +189,7 @@
                         <div class="card product-card shadow-sm">
                             <div class="shine-layer"></div>
                             <div class="card-img-wrapper">
-                                <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=600&q=80"
-                                    alt="Sofa">
+                                <img src="assets/img/sofa.jpg" alt="Sofa">
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Modern Sofa</h5>
