--- a/furniture.html
+++ b/furniture.html
@@ -450,9 +450,10 @@
                                 <div class="d-flex flex-column align-items-center flex-shrink-0 mt-3 mt-lg-0"
                                     style="gap: 10px;">
                                     <img src="assets/img/qrcode/1.png" alt="QR Code 1"
-                                        style="width: 95px; height: auto;" onerror="this.style.display='none'">
+                                        style="width: 160px; height: auto;">
                                     <img src="assets/img/qrcode/2.png" alt="QR Code 2"
-                                        style="width: 95px; height: auto;" onerror="this.style.display='none'">
+                                        style="width: 160px; height: auto;">
+
                                 </div>
                             </div>
                         </div>
