--- a/contact.html
+++ b/contact.html
@@ -210,11 +210,11 @@
               <div class="row">
                 <div class="col-md-6 mb-3">
                   <label for="name" class="form-label">Your Name</label>
-                  <input type="text" class="form-control" id="name" placeholder="John Doe" required>
+                  <input type="text" class="form-control" id="name" placeholder="" required>
                 </div>
                 <div class="col-md-6 mb-3">
                   <label for="email" class="form-label">Email Address</label>
-                  <input type="email" class="form-control" id="email" placeholder="email@example.com" required>
+                  <input type="email" class="form-control" id="email" placeholder="" required>
                 </div>
               </div>
 
